# Show_MetaData_Using_TagLib

./: CMakeLists.txt  README.md  main.cpp
